WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
26897
Dynamic SVG images do not display correctly
https://bugs.webkit.org/show_bug.cgi?id=26897
Summary
Dynamic SVG images do not display correctly
Mike Wilcox
Reported
2009-07-01 12:59:48 PDT
As per the link:
http://mwilcox.dojotoolkit.org/svg/svg2.xhtml
When inserting image nodes into the SVG doc, there are rendering problems. The test case shows that both images (a local and remote) show only half the image. Blurring and focusing the browser window will get them to display. Note also in the JavaScript of the file, if I insert the element first then set the attributes, the image never shows.
Attachments
First attempt
(5.35 KB, patch)
2009-07-04 12:54 PDT
,
Rob Buis
mjs
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Rob Buis
Comment 1
2009-07-04 12:54:00 PDT
Created
attachment 32261
[details]
First attempt Using repaint works for both normal svg and svg embedded in xhtml. Since it ends up calling clipped clippedOverflowRectForRepaint just like absoluteClippedOverflowRect does the computed update rects should be equal. Cheers, Rob.
Maciej Stachowiak
Comment 2
2009-07-05 04:28:48 PDT
Comment on
attachment 32261
[details]
First attempt r=me
Rob Buis
Comment 3
2009-07-05 06:08:05 PDT
Landed in
r45550
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug