        Reviewed by Maciej Stachowiak.

Bug 26897 - Dynamic SVG images do not display correctly
        https://bugs.webkit.org/show_bug.cgi?id=26897

        Use repaint() to fix a rendering problem with a SVG image embedded in xhtml.

        Test: svg/custom/createImageElement2.xhtml

        * rendering/RenderSVGImage.cpp:
        (WebCore::RenderSVGImage::imageChanged):

git-svn-id: svn://svn.chromium.org/blink/trunk@45550 bbb929c8-8fbe-4397-9dbb-9b2b20218538